# ptop

./: CLAUDE.md  IMPLEMENTATION_PLAN.md  ORIGINAL_PROMPT.md  PRD.md  README.md  pyproject.toml  pytest.ini  test_plan.md
src/ptop/: __init__.py  app.py  main.py
src/ptop/collectors/: base.py  cpu.py  logs.py  memory.py  process.py  storage.py
src/ptop/config/: settings.py
src/ptop/utils/: formatters.py  helpers.py
src/ptop/widgets/: base.py  cpu_widget.py  logs_widget.py  memory_widget.py  process_widget.py  storage_widget.py
tests/: conftest.py
tests/test_base/: __init__.py  test_base_collector.py  test_base_widget.py
tests/test_collectors/: __init__.py  test_cpu_collector.py  test_logs_collector.py  test_memory_collector.py  test_process_collector.py  test_storage_collector.py
tests/test_config/: __init__.py  test_settings.py
tests/test_utils/: test_formatters.py  test_helpers.py
